Fix: Restore friend tile height and change overflow-y from scroll to auto

--- a/src/app/presentation/pages/dashboard/components/chat/chat.component.scss
+++ b/src/app/presentation/pages/dashboard/components/chat/chat.component.scss
@@ -26,7 +26,7 @@ h2 {
 
 .message-window {
   padding: 20px;
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 80%;
 }
 
