--- a/src/app/presentation/pages/dashboard/components/friends-tile/friends-tile.component.scss
+++ b/src/app/presentation/pages/dashboard/components/friends-tile/friends-tile.component.scss
@@ -6,6 +6,8 @@
   align-items: center;
   position: relative;
   cursor: pointer;
+  min-height: 50px;
+  padding: 15px 0;
 }
 
 :host(.selected) {
